@@ -10,6 +10,7 @@ NOTE: Do not "tidy" or change the indenting here, or we break svn annotate
       settings (AZAWAWI)
     - Fixed an incorrect default value display bug in advanced preferences
       when it is toggled (AZAWAWI)
+    - In advanced preferences, hide bottom controls at startup (AZAWAWI)
     - Fixed ticket #858 Recent files does not display anything on Padre startup
       (AZAWAWI)
     - Refresh all menus at startup. This prevents "nothing" open mode (i.e. no
